done datasets, TODO layers and learning

--- a/BIAIAlcohol/config.ini
+++ b/BIAIAlcohol/config.ini
@@ -20,5 +20,9 @@ HeightMin:100.0
 HeightMax:230.0
 WeightMin:40.0
 WeightMax:300.0
+AddUncertainity+-21%?:0
 Gender:both: may be equal to 'male' or 'female' or 'both'
 DatasetLocation:WidmarkBACdataset.txt
+TrainModel?:1
+UseModel?:0
+ModelLocation:model.h5
