--- a/BIAIAlcohol/config.ini
+++ b/BIAIAlcohol/config.ini
@@ -1,19 +1,19 @@
 GenerateData?:1
 RoundPlaces:2
-DatasetSize:100000
-RandomDrinkingTimeMaxHours:24
-Beverage1MaxAmountML:5000.0
+DatasetSize:10000
+RandomDrinkingTimeMaxHours:6
+Beverage1MaxAmountML:5.0
 Beverage1MinAmountML:0.0
-Beverage2MaxAmountML:5000.0
+Beverage2MaxAmountML:0.0
 Beverage2MinAmountML:0.0
-Beverage3MaxAmountML:5000.0
+Beverage3MaxAmountML:0.0
 Beverage3MinAmountML:0.0
 Beverage1%Min:0.0
-Beverage1%Max:1.0
+Beverage1%Max:0.1
 Beverage2%Min:0.0
-Beverage2%Max:1.0
+Beverage2%Max:0.0
 Beverage3%Min:0.0
-Beverage3%Max:1.0
+Beverage3%Max:0.0
 AgeMin:18.0
 AgeMax:110.0
 HeightMin:100.0
@@ -26,3 +26,8 @@ DatasetLocation:WidmarkBACdataset.txt
 TrainModel?:1
 UseModel?:0
 ModelLocation:model.h5
+SelfTest?:0
+GenerateTestSet?:1
+TestSetSize:10
+TestSetLocation:testSet.txt
+UseTestSet?:1
