--- a/BIAIAlcohol/config.ini
+++ b/BIAIAlcohol/config.ini
@@ -2,9 +2,9 @@ GenerateData?:0
 RoundPlaces:2
 DatasetSize:50000
 RandomDrinkingTimeMaxHours:6
-Beverage1MaxAmountML:3.0
+Beverage1MaxAmountML:4.0
 Beverage1MinAmountML:0.0
-Beverage2MaxAmountML:1.0
+Beverage2MaxAmountML:2.0
 Beverage2MinAmountML:0.0
 Beverage3MaxAmountML:1.0
 Beverage3MinAmountML:0.0
@@ -13,9 +13,9 @@ Beverage1%Max:0.1
 Beverage2%Min:0.0
 Beverage2%Max:0.2
 Beverage3%Min:0.0
-Beverage3%Max:0.2
+Beverage3%Max:0.4
 AgeMin:18.0
-AgeMax:110.0
+AgeMax:100.0
 HeightMin:100.0
 HeightMax:230.0
 WeightMin:40.0
@@ -23,11 +23,13 @@ WeightMax:300.0
 AddUncertainity+-21%?:0
 Gender:both: may be equal to 'male' or 'female' or 'both'
 DatasetLocation:WidmarkBACdataset.txt
-TrainModel?:1
-UseModel?:0
+TrainModel?:0
+UseModel?:1
 ModelLocation:model.h5
 SelfTest?:0
 GenerateTestSet?:0
 TestSetSize:10
 TestSetLocation:testSet.txt
-UseTestSet?:1
+UseTestSet?:0
+UseConsoleInterface?:0
+UseGraphicalInterface?:1
